# dotfiles

./: .editorconfig  Dockerfile  Makefile  README.md  default.nix  dotfiles.nix  install.sh  packages  root_install.sh  setup.sh  shell.nix  user_install.sh
arch/: _install.sh
docker/: windows.zsh
docker/npm/: _install.sh
docker/tmux/: tmux.conf.symlink
docker/vim/: _install.sh  align.vim  general.vim  nerdtree.vim  whitespace.vim
docker/zsh/: completion.zsh  options.zsh  plugins.zsh
emacs/: default.nix  hack.fish  path.fish  path.zsh
emacs/doom.d/: config.el  init.el  packages.el
fish/: default.nix  greeting.fish  prompt.fish
fontconfig/: default.nix
git/: default.nix  gitconfig.symlink
gpg/: bootstrap.fish  default.nix  fix-permissions.fish  keyring.nix  nutty7t.public.gpg  nuttycloud.public.gpg  variables.fish
nixos/: configuration.nix  hardware-configuration.nix
npm/: _install.sh
pkg/: list.txt
python/: _install.sh
st/: config.h
tmux/: _install.sh  default.nix  tmux.conf  tmux.conf.symlink
vim/: _install.sh  align.vim  completion.json  completion.vim  default.nix  emmet.vim  filetype.vim  fuzzy.vim  general.vim  gui.vim  install.sh  main.vim  markdown.vim  nerdtree.vim  plugins.vim  sneak.vim  whitespace.vim
windows/: Dockerfile  locale.zsh  packages  profiles.json  setup.sh  shell.nix
x11/: windows.fish  windows.zsh
xmonad/: .gitignore  CHANGELOG.md  LICENSE  Main.hs  hie.yaml  xmonad-nutty.cabal
zsh/: _install.sh  aliases.zsh  completion.zsh  default.nix  install.sh  nix.zsh  plugins.zsh  prompt.zsh  zshrc.symlink
(+47 files in other folders)
