cabal-version:      3.0
name:               xmonad-nutty
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             nutty7t
maintainer:         blackhole@nutty.email
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Main
  build-depends:
    , base            ^>=4.13.0.0
    , containers
    , xmonad
    , xmonad-contrib

  default-language: Haskell2010
